syntax = "proto3";

package pb;

option go_package="./pb";

service AdminService{
  rpc GetUsersID(GetUsersIDsRequest) returns (GetUsersIDsResponse){}
  rpc AssignAdmin(AssignAdminRequest) returns (AssignAdminResponse){}
}


message GetUsersIDsRequest{
}

message GetUsersIDsResponse{
  repeated string ids = 1;
  int32 status = 2;
  string err = 3;
}

message AssignAdminRequest{
  string id=1;
}

message AssignAdminResponse{
  int32 status=1;
  string err=2;
}